modiied serverless file

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,7 +1,7 @@
 # TODO: Change the name of the org 
 org: nikita0000000
-app: serverless-todo-app
-service: serverless-todo-app
+app: serverless-capstone-app
+service: serverless-capstone-app
 
 plugins:
   - serverless-webpack
@@ -24,9 +24,9 @@ provider:
   # Use these variables in the functions and resouorces section below. For example, 
   # ${self:provider.environment.ATTACHMENT_S3_BUCKET}
   environment:
-    TODOS_TABLE: Todos-${self:provider.stage}
-    TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    ATTACHMENT_S3_BUCKET: serverless-todo-app-images-${self:provider.stage}
+    BLOGS_TABLE: Blogs-${self:provider.stage}
+    BLOGS_CREATED_AT_INDEX: CreatedAtIndex
+    ATTACHMENT_S3_BUCKET: serverless-capstone-app-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
   logs:
@@ -40,12 +40,12 @@ functions:
 
   # TODO: Configure this function - 
   # Provide iamRoleStatements property for performing Actions on DynamoDB
-  GetTodos:
-    handler: src/lambda/http/getTodos.handler
+  GetBlogs:
+    handler: src/lambda/http/getBlogs.handler
     events:
       - http:
           method: get
-          path: todos
+          path: blogs
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -55,62 +55,62 @@ functions:
           - xray:PutTraceSegments
           - dynamodb:GetItem
           - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODOS_CREATED_AT_INDEX}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BLOGS_TABLE}/index/${self:provider.environment.BLOGS_CREATED_AT_INDEX}
 
   # TODO: Configure this function - 
   # Provide iamRoleStatements property. Decide the Actions and AWS Resource. 
   # To refer to an AWS resource defined in the "Resources" section, you can use "Resource: !GetAtt <resource-name>.Arn"
   # To validate incoming HTTP requests, we have provided the request schemas in function definition below. 
-  CreateTodo:
-    handler: src/lambda/http/createTodo.handler
+  CreateBlog:
+    handler: src/lambda/http/createBlog.handler
     events:
       - http:
           method: post
-          path: todos
+          path: blogs
           cors: true
           authorizer: Auth
           reqValidatorName: RequestBodyValidator
           request:
             schema:
-              application/json: ${file(models/create-todo-model.json)}
+              application/json: ${file(models/create-blog-model.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
           - xray:PutTelemetryRecords
           - xray:PutTraceSegments
           - dynamodb:PutItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BLOGS_TABLE}
 
   # TODO: Configure this function
   # Provide property for setting up CORS, Authorizer, iamRoleStatements, and request schemas
-  UpdateTodo:
-    handler: src/lambda/http/updateTodo.handler
+  UpdateBlog:
+    handler: src/lambda/http/updateBlog.handler
     events:
       - http:
           method: patch
-          path: todos/{todoId}
+          path: blogs/{blogId}
           cors: true
           authorizer: Auth
           reqValidatorName: RequestBodyValidator
           request:
             schema:
-              application/json: ${file(models/update-todo-model.json)}
+              application/json: ${file(models/update-blog-model.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
           - xray:PutTelemetryRecords
           - xray:PutTraceSegments
           - dynamodb:UpdateItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BLOGS_TABLE}
 
   # TODO: Configure this function
   # Provide property for setting up CORS, Authorizer, iamRoleStatements
-  DeleteTodo:
-    handler: src/lambda/http/deleteTodo.handler
+  DeleteBlog:
+    handler: src/lambda/http/deleteBlog.handler
     events:
       - http:
           method: delete
-          path: todos/{todoId}
+          path: blogs/{blogId}
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -119,7 +119,7 @@ functions:
           - xray:PutTelemetryRecords
           - xray:PutTraceSegments
           - dynamodb:DeleteItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BLOGS_TABLE}
 
   # TODO: Configure this function
   # Provide property for setting up CORS, Authorizer, iamRoleStatements
@@ -128,7 +128,7 @@ functions:
     events:
       - http:
           method: post
-          path: todos/{todoId}/attachment
+          path: blogs/{blogId}/attachment
           cors: true
           authorizer: Auth
     iamRoleStatements:
@@ -155,25 +155,25 @@ resources:
           Ref: 'ApiGatewayRestApi'
     
     # TODO: Create a DynamoDB table with local secondary index and a composite key
-    TodosTable:
+    BlogsTable:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
           - AttributeName: userId
             AttributeType: S
-          - AttributeName: todoId
+          - AttributeName: blogId
             AttributeType: S
           - AttributeName: createdAt
             AttributeType: S
         KeySchema:
           - AttributeName: userId
             KeyType: HASH
-          - AttributeName: todoId
+          - AttributeName: blogId
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
-        TableName: ${self:provider.environment.TODOS_TABLE}
+        TableName: ${self:provider.environment.BLOGS_TABLE}
         GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
+          - IndexName: ${self:provider.environment.BLOGS_CREATED_AT_INDEX}
             KeySchema:
               - AttributeName: userId
                 KeyType: HASH
