added ownership permission

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -188,6 +188,9 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:provider.environment.ATTACHMENT_S3_BUCKET}
+        OwnershipControls:
+          Rules:
+            -  ObjectOwnership: ObjectWrite
         PublicAccessBlockConfiguration:
           BlockPublicAcls: false
           BlockPublicPolicy: false
